# EulerResolve

./: CMakeLists.txt  README.md  main.cpp
include/: EulerResolve.h  Graph.h  Person.h  ReadFile.h
input/: people.txt  relationship.txt
src/: EulerResolve.cpp  Graph.cpp  Person.cpp  ReadFile.cpp
